--- a/CDOPA_prova.ipynb
+++ b/CDOPA_prova.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,18 +15,20 @@
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from keras import layers\n",
+    "from keras import regularizers\n",
     "import tensorflow_addons as tfa\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 8\n",
     "epochs = 200\n",
+    "\n",
     "threshold = 7000 #intensity of pixel to ignore\n",
     "#number of depth images to keep, only a certain number contains the base gangli\n",
     "zmin = 20\n",
@@ -48,6 +50,24 @@
     "\n",
     "background_percentage = 0.4\n",
     "\n",
+    "num_classes = 2\n",
+    "\n",
+    "#model hyperparameters\n",
+    "conv_depth_1 = 15 \n",
+    "conv_depth_2 = 25 \n",
+    "conv_depth_3 = 50 \n",
+    "conv_depth_4 = 50 \n",
+    "fc_nodes = 512\n",
+    "\n",
+    "drop_prob_1 = 0.25 \n",
+    "drop_prob_2 = 0.5\n",
+    "drop_prob_3 = 0.25 \n",
+    "drop_prob_4 = 0.5\n",
+    "l2_penalty = 1e-3\n",
+    "\n",
+    "learning_rate = 1e-3\n",
+    "\n",
+    "\n",
     "project_dir = os.getcwd()\n",
     "\n",
     "data_folder = os.path.join(project_dir, 'CDOPA_dataset')\n",
@@ -56,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +218,86 @@
     "\n",
     "    return augmented_dataset, Y_D, Y_DATA\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "MODEL BUILDING FUNCTIONS\n",
+    "\"\"\"\n",
+    "\n",
+    "def conv_pool_drop_block(\n",
+    "    input,\n",
+    "    num_filters,\n",
+    "    l2_penalty,\n",
+    "    drop_rate,\n",
+    "    kernel_size=3,\n",
+    "    padding='same',\n",
+    "    kernel_initializer='he_uniform',\n",
+    "    kernel_regularizer=regularizers.L2(l2_penalty),\n",
+    "    activation='relu',\n",
+    "    pool_size=2,\n",
+    "):\n",
+    "\n",
+    "    x = layers.Conv3D(\n",
+    "        num_filters, \n",
+    "        kernel_size=kernel_size,\n",
+    "        padding=padding,\n",
+    "        kernel_initializer=kernel_initializer,\n",
+    "        kernel_regularizer=kernel_regularizer,\n",
+    "        activation=activation\n",
+    "        )(input)\n",
+    "\n",
+    "    x = layers.MaxPooling3D(pool_size=pool_size)(x)\n",
+    "    x = layers.Dropout(drop_rate)(x)\n",
+    "\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "def fc_block(\n",
+    "    input,\n",
+    "    num_layers,\n",
+    "    fc_nodes,\n",
+    "    drop_rate,\n",
+    "    l2_penalty,\n",
+    "    kernel_regularizer=regularizers.L2(l2_penalty),\n",
+    "    activation='relu',\n",
+    "\n",
+    "):\n",
+    "    x = layers.Flatten()(input)\n",
+    "\n",
+    "    for fc_layers in range(num_layers):\n",
+    "        x = layers.Dense(\n",
+    "            fc_nodes,\n",
+    "            kernel_regularizer=kernel_regularizer,\n",
+    "            )(x)\n",
+    "        x = layers.Dropout(drop_rate)(x)\n",
+    "    \n",
+    "    return x\n",
+    "    \n",
+    "\n",
+    "def build_model(\n",
+    "    img_size,\n",
+    "    num_classes,\n",
+    "):\n",
+    "    input = keras.Input(shape=(img_size, img_size, deltaZ, 1))\n",
+    "    x = layers.Rescaling(scale=1/125.5, offset=-1)(input)\n",
+    "\n",
+    "    x = conv_pool_drop_block(x, num_filters=conv_depth_1, l2_penalty=l2_penalty, drop_rate=drop_prob_1)\n",
+    "    x = conv_pool_drop_block(x, num_filters=conv_depth_2, l2_penalty=l2_penalty, drop_rate=drop_prob_2)\n",
+    "    x = conv_pool_drop_block(x, num_filters=conv_depth_3, l2_penalty=l2_penalty, drop_rate=drop_prob_3)\n",
+    "    x = layers.Conv3D(conv_depth_4, (3,3,3), padding='same', kernel_initializer='he_uniform', kernel_regularizer=regularizers.L2(l2_penalty), activation='relu')(x)\n",
+    "    x = layers.Dropout(drop_prob_4)(x)\n",
+    "\n",
+    "    x = fc_block(x, num_layers=2, fc_nodes=fc_nodes, drop_rate=drop_prob_4, l2_penalty=l2_penalty)\n",
+    "    \n",
+    "    output = layers.Dense(num_classes, kernel_regularizer=regularizers.L2(l2_penalty), activation='softmax')(x)\n",
+    "\n",
+    "    return keras.Model(inputs=input, outputs=output)\n"
    ]
   },
   {
