--- a/CDOPA_prova.ipynb
+++ b/CDOPA_prova.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
     "img_size = deltaX+1\n",
     "\n",
     "#during data augmentation the images will be shifted in the 4 directions of 5% and 10% of the width\n",
-    "shifting_percentages = [img_size*0.05, img_size*0.1]\n",
+    "shifting_percentages = [img_size*0.05, img_size*0.1, -img_size*0.05, -img_size*0.1]\n",
     "\n",
     "background_percentage = 0.4\n",
     "\n",
@@ -65,18 +65,36 @@
     "drop_prob_4 = 0.5\n",
     "l2_penalty = 1e-3\n",
     "\n",
-    "learning_rate = 1e-3\n",
-    "\n",
-    "\n",
-    "project_dir = os.getcwd()\n",
-    "\n",
-    "data_folder = os.path.join(project_dir, 'CDOPA_dataset')\n",
-    "csv_path = os.path.join(project_dir, 'carbidopa.csv')"
+    "learning_rate = 1e-3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project_dir = os.getcwd()\n",
+    "\n",
+    "try_num = 1\n",
+    "try_dir = os.path.join(project_dir, 'try_{try_num}'.format(try_num=try_num))\n",
+    "if os.path.exists(try_dir):\n",
+    "    raise Exception(\"Directory name already used, update try_num\")\n",
+    "else:\n",
+    "    os.mkdir(try_dir)\n",
+    "\n",
+    "data_folder = os.path.join(project_dir, 'CDOPA_dataset')\n",
+    "csv_path = os.path.join(project_dir, 'carbidopa.csv')\n",
+    "\n",
+    "hyper_params_filepath = os.path.join(try_dir, 'hyperparameters.txt')\n",
+    "model_filepath = os.path.join(try_dir, 'model.h5')\n",
+    "summary_filepath = os.path.join(try_dir, 'model_summary.txt')\n",
+    "hist_csv_filepath = os.path.join(try_dir, 'history.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,25 +183,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "DATA AUGMENTATION FUNCTIONS\n",
+    "DATASET MANIPULATION FUNCTIONS\n",
     "\"\"\"\n",
     "\n",
     "#shift param is how many pixel the image has to be shifted, \n",
     "# it has to be a signed flot for tanslation to the left or right\n",
     "\n",
     "\n",
-    "def shift_dataset(images, shift_param, axis='x'):\n",
+    "def shift_image(image, shift_param, axis='x'):\n",
     "    \n",
     "    if axis=='x':\n",
-    "        return tfa.image.translate(images, [shift_param,0])\n",
+    "        return tfa.image.translate(image, [shift_param,0])\n",
     "\n",
     "    if axis=='y':\n",
-    "        return tfa.image.translate(images, [0, shift_param])\n",
+    "        return tfa.image.translate(image, [0, shift_param])\n",
     "\n",
     "    else:\n",
     "        raise Exception(\"Only x or y are valid axes\")\n",
@@ -203,8 +221,12 @@
     "\n",
     "            for axis in axes:\n",
     "            \n",
-    "                shifted_dataset = shift_dataset(X_DATA, shift_perc, axis=axis)\n",
-    "                augmented_dataset = np.append(augmented_dataset, shifted_dataset, axis=0)\n",
+    "                shifted_image = shift_image(X_DATA[numpatient, :, :, :], shift_param=shift_perc, axis=axis)\n",
+    "                #shifted_image_minus = shift_image(X_DATA[numpatient, :, :, :], shift_param=-shift_perc, axis=axis)\n",
+    "                shifted_image = np.expand_dims(shifted_image, axis=0)\n",
+    "                #shifted_image_minus = np.expand_dims(shifted_image_minus, axis=0)\n",
+    "                augmented_dataset = np.append(augmented_dataset, shifted_image, axis=0)\n",
+    "                #augmented_dataset = np.append(augmented_dataset, shifted_image_minus, axis=0)\n",
     "\n",
     "                guid = uuid.uuid4()\n",
     "                current_label = Y_DATA[numpatient]\n",
@@ -216,12 +238,25 @@
     "                Y_DATA[last_index + numpatient] = current_label\n",
     "\n",
     "    return augmented_dataset, Y_D, Y_DATA\n",
+    "\n",
+    "\n",
+    "def prep_dataset(X_DATA, Y_DATA, num_classes):\n",
+    "\n",
+    "    X_DATA = X_DATA.astype('float32')\n",
+    "    X_DATA = np.expand_dims(X_DATA, axis=4)#axis to store channel info\n",
+    "\n",
+    "    Y_DATA[Y_DATA=='N'] = 0.\n",
+    "    Y_DATA[Y_DATA=='T'] = 0.\n",
+    "    Y_DATA[Y_DATA=='P'] = 1.\n",
+    "    Y_DATA = keras.utils.to_categorical(Y_DATA, num_classes)\n",
+    "\n",
+    "    return X_DATA, Y_DATA\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +352,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(87, 130, 130, 10)\n",
+      "(87, 2)\n",
+      "(87, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_DATA.shape)\n",
+    "print(Y_D.shape)\n",
+    "print(Y_DATA.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,11 +382,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60, 130, 130, 10)\n",
+      "(60, 2)\n",
+      "(60, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_DATA.shape)\n",
+    "print(Y_D.shape)\n",
+    "print(Y_DATA.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(130, 130, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_DATA[0, :, :, :].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_DATA_NEW, Y_D_NEW, Y_DATA_NEW = get_shifted_dataset(X_DATA, Y_D, Y_DATA, shifting_percentages=shifting_percentages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(540, 130, 130, 10)\n",
+      "(540, 2)\n",
+      "(540, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_DATA_NEW.shape)\n",
+    "print(Y_D_NEW.shape)\n",
+    "print(Y_DATA_NEW.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_DATA_NEW, Y_DATA_NEW = prep_dataset(X_DATA_NEW, Y_DATA_NEW, num_classes=num_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(540, 130, 130, 10, 1)\n",
+      "(540, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_DATA_NEW.shape)\n",
+    "print(Y_DATA_NEW.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_DATA_TRAIN, X_DATA_VAL, Y_DATA_TRAIN, Y_DATA_VAL, Y_D_TRAIN, Y_D_VAL = train_test_split(X_DATA_NEW, Y_DATA_NEW, Y_D_NEW, test_size=0.20, random_state=21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(X_DATA_TRAIN.shape)\n",
+    "print(X_DATA_VAL.shape)\n",
+    "print(Y_D_TRAIN.shape)\n",
+    "print(Y_D_VAL.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = keras.losses.CategoricalCrossentropy()\n",
+    "optimizer = keras.optimizers.Adam(learning_rate=learning_rate)\n",
+    "\n",
+    "model = build_model(img_size=img_size, num_classes=num_classes)\n",
+    "\n",
+    "with open(summary_filepath, 'w') as f:\n",
+    "    model.summary(print_fn=lambda x: f.write(x + '\\n'))\n",
+    "\n",
+    "model.compile(\n",
+    "    loss=loss,\n",
+    "    optimizer=optimizer,\n",
+    "    metrics=['accuracy']\n",
+    ")\n",
+    "\n",
+    "callbacks = [\n",
+    "    keras.callbacks.EarlyStopping(\n",
+    "        patience=25,\n",
+    "        monitor='val_loss'\n",
+    "    ),\n",
+    "    keras.callbacks.ModelCheckpoint(\n",
+    "        filepath=model_filepath,\n",
+    "        save_best_only=True\n",
+    "    )\n",
+    "]\n",
+    "\n",
+    "history = model.fit(\n",
+    "    x = X_DATA_TRAIN,\n",
+    "    y = Y_DATA_TRAIN,\n",
+    "    batch_size=batch_size,\n",
+    "    validation_data=(X_DATA_VAL, Y_DATA_VAL),\n",
+    "    epochs=epochs,\n",
+    "    callbacks=callbacks,\n",
+    ")\n",
+    "\n",
+    "hist_df = pd.DataFrame(history.history)\n",
+    "with open(hist_csv_filepath, mode='w') as f:\n",
+    "    hist_df.to_csv(f)\n"
    ]
   }
  ],
